# post-trade-ops-simulator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: PROCEDURES.md
docs/screenshots/: breaks_queue.html  recon_variance.html  settlement_calendar.html
post_trade/: __init__.py  confirmation.py  dashboard.py  lifecycle.py  reconciliation.py  settlement.py  trade.py
tests/: test_confirmation.py  test_dashboard.py  test_extended_products.py  test_lifecycle.py  test_reconciliation.py  test_settlement.py  test_trade.py
