[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "post-trade-ops-simulator"
version = "0.1.0"
description = "MVP simulator of Middle Office post-trade workflows: trade booking, confirmation, lifecycle, settlement, breaks, reconciliation, and Plotly dashboard. 5 products, 73 tests."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Donking123", email = "Donking123@users.noreply.github.com"}]
requires-python = ">=3.11"
keywords = [
    "middle-office",
    "trade-support",
    "post-trade",
    "settlement",
    "reconciliation",
    "derivatives",
    "fx",
    "irs",
    "plotly",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=2.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter",
    "nbconvert",
]

[project.urls]
Repository = "https://github.com/Donking123/post-trade-ops-simulator"
Issues = "https://github.com/Donking123/post-trade-ops-simulator/issues"

[tool.hatch.build.targets.wheel]
packages = ["post_trade"]
